# wcmatch

./: .coveragerc  .gitignore  .pyspelling.yml  .spelling.yml  .travis.yml  404.html  LICENSE.md  MANIFEST.in  README.md  appveyor.yml  extra-30d8e6755c.css  hatch_build.py  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  tox.ini  zensical.yml
.github/: labeler.yml  labels.json  labels.yml
.github/workflows/: branches.yml  build.yml  deploy.yml  labels.yml  master.yml  publish.yaml  pull.yml  pullrequest.yml  pythonpackage.yml
_snippets/: links.txt  posix.txt
about/changelog/: index.html
about/contributing/: index.html
about/license/: index.html
about/release/: index.html
changelog/: index.html
docs/src/dictionary/: en-custom.txt
docs/src/markdown/: changelog.md  fnmatch.md  glob.md  index.md  license.md  pathlib.md  wcmatch.md
docs/src/markdown/.snippets/: posix.md
docs/src/markdown/_snippets/: links.txt  posix.md  posix.txt
docs/src/markdown/about/: changelog.md  contributing.md  license.md  release.md
docs/theme/: announce.html  extra-30d8e6755c.css  main.html
fnmatch/: index.html
glob/: index.html
license/: index.html
pathlib/: index.html
requirements/: docs.txt  lint.txt  setup.txt  test.txt
search/: search_index.json
tests/: __init__.py  brace-cases.txt  brace-results.txt  brace-results2.txt  test_brace.py  test_fnmatch.py  test_glob.py  test_globmatch.py  test_pathlib.py  test_versions.py  test_wcmatch.py  test_wcparse.py
tests/dir_walker/: c.txt.bak
tools/: gh_labels.py  labels.json
wcmatch/: __init__.py  __meta__.py  __version__.py  _wcmatch.py  _wcparse.py  braces.py  file_attrs.py  file_hidden.py  fnmatch.py  glob.py  index.html  pathlib.py  posix.py  types.py  util.py  wcfind.py  wcmatch.py  wcparse.py
