[build-system]
requires = [
    "hatchling>=0.21.1",
]
build-backend = "hatchling.build"

[project]
name = "wcmatch"
description = "Wildcard/glob file name matcher."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "Isaac Muse", email = "Isaac.Muse@gmail.com" },
]
keywords = [
    "glob",
    "fnmatch",
    "search",
    "wildcard"
]
dynamic = [
    "classifiers",
    "dependencies",
    "version",
]

[project.urls]
Homepage = "https://github.com/facelessuser/wcmatch"

[tool.hatch.version]
source = "code"
path = "wcmatch/__meta__.py"

[tool.hatch.build.targets.wheel]
include = [
    "/wcmatch",
]

[tool.hatch.build.targets.sdist]
include = [
    "/docs/src/markdown/**/*.md",
    "/docs/src/markdown/**/*.gif",
    "/docs/src/markdown/**/*.png",
    "/docs/src/markdown/dictionary/*.txt",
    "/docs/theme/**/*.css",
    "/docs/theme/**/*.js",
    "/docs/theme/**/*.html",
    "/requirements/*.txt",
    "/wcmatch/**/*.py",
    "/wcmatch/py.typed",
    "/tests/**/*.py",
    "/tools/**/*.py",
    "/.pyspelling.yml",
    "/.coveragerc",
    "/mkdocs.yml",
    "/tox.ini",
]

[tool.mypy]
files = [
    "wcmatch"
]
strict = true
show_error_codes = true

[tool.hatch.metadata.hooks.custom]
