[build-system]
requires = [
    "hatchling>=0.21.1",
]
build-backend = "hatchling.build"

[project]
name = "wcmatch"
description = "Wildcard/glob file name matcher."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Isaac Muse", email = "Isaac.Muse@gmail.com" },
]
keywords = [
    "glob",
    "fnmatch",
    "search",
    "wildcard"
]
dynamic = [
    "classifiers",
    "version",
]

dependencies = [
    "bracex>=2.1.1"
]

[project.urls]
Homepage = "https://github.com/facelessuser/wcmatch"

[tool.hatch.version]
source = "code"
path = "wcmatch/__meta__.py"

[tool.hatch.build.targets.wheel]
include = [
    "/wcmatch",
]

[tool.hatch.build.targets.sdist]
include = [
    "/docs/src/markdown/**/*.md",
    "/docs/src/markdown/**/*.gif",
    "/docs/src/markdown/**/*.png",
    "/docs/src/markdown/dictionary/*.txt",
    "/docs/theme/**/*.css",
    "/docs/theme/**/*.js",
    "/docs/theme/**/*.html",
    "/requirements/*.txt",
    "/wcmatch/**/*.py",
    "/wcmatch/py.typed",
    "/tests/**/*.py",
    "/tools/**/*.py",
    "/.pyspelling.yml",
    "/.coveragerc",
    "/mkdocs.yml"
]

[tool.mypy]
files = [
    "wcmatch"
]
strict = true
show_error_codes = true

[tool.hatch.metadata.hooks.custom]

[tool.ruff]
line-length = 120

lint.select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "D",    # pydocstyle
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
    "E",    # pycodestyle
    "F",    # pyflakes
    "PGH",  # pygrep-hooks
    "RUF",  # ruff
    # "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020,
    "PERF"  # Perflint
]

lint.ignore = [
    "E741",
    "D202",
    "D401",
    "D212",
    "D203",
    "D417",
    "N802",
    "N801",
    "N803",
    "N806",
    "N818",
    "RUF012",
    "RUF005",
    "PGH004",
    "RUF022",
    "RUF023",
    "RUF100"
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
skipsdist=true
envlist=
    py39,py310,py311,py312,py313,py314,
    lint

[testenv]
passenv=LANG
deps=
    .
    -r requirements/test.txt
commands=
    {envpython} -m mypy
    {envpython} -m pytest --cov wcmatch --cov-append tests
    {envpython} -m coverage html -d {envtmpdir}/coverage
    {envpython} -m coverage xml
    {envpython} -m coverage report --show-missing

[testenv:lint]
deps=
    -r requirements/lint.txt
commands=
    "{envbindir}"/ruff check .

[testenv:documents]
deps=
    -r requirements/docs.txt
commands=
    {envpython} -m mkdocs build --clean --verbose --strict
    {envbindir}/pyspelling -j 8

[pytest]
addopts=-p no:warnings
"""
